@startuml class_diagram_stringify_asm

skinparam linetype polyline
skinparam classFontName Helvetica
skinparam ClassFontSize 14
skinparam ArrowColor MidnightBlue
skinparam groupInheritance 2


skinparam class {

}

interface IInstructionProducer {
    {abstract} + process_file(file: str, iConsumer: IConsumer) -> None
}


class ComposableProducer {
    + disassembler: Disassembler
    + parser: AsmParser
    + __init__(disassembler: Disassembler, parser: AsmParser) -> None
    + process_file(file: str, iConsumer: IConsumer) -> None
}

package Disassemblers {

    abstract class Disassembler {
        {abstract} + disassemble(input_file: str) -> str
    }
    class ShellDisassembler {
        - program: str
        - flags: str
        + __init__(program: str, flags: str) -> None
        + disassemble(input_file: str) -> str
    }

    class GNUObjdumpDisassembler {
        + __init__(flags: str) -> None

    }

    class LLvmObjdumpDisassembler {
        + __init__(flags: str) -> None
    }

    class NullDisassembler {
        + disassemble(input_file: str) -> str
    }
}




package Parsers{
    abstract class AsmParser {
        {abstract} parse(file: str, iConsumer: IConsumer) -> None:

    }

    class LlvmObjdumpParser {
        + parse(file: str, iConsumer: IConsumer) -> None
    }


    class GNUObjdumpParser {
        + parse(file: str, iConsumer: IConsumer) -> None
    }

}




' Stringify_Asm

' Producer
IInstructionProducer <|-- ComposableProducer

AsmParser <|--- GNUObjdumpParser
AsmParser <|--- LlvmObjdumpParser

Disassembler <|-- ShellDisassembler
ShellDisassembler <|-- GNUObjdumpDisassembler
ShellDisassembler <|-- LLvmObjdumpDisassembler
Disassembler <|--- NullDisassembler

' Hidden arrow to draw the relation Disassembler -> NullDisassembler in the correct level
NullDisassembler -[hidden]> LLvmObjdumpDisassembler: uses


ComposableProducer --o Disassembler
ComposableProducer --o AsmParser



@enduml